--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Lucio Acri" />
-    <title>Document</title>
+    <title>Bootstrap dashboard</title>
     <link rel="shortcut icon" href="./img/Logo.png" type="image/x-icon" />
     <!-- FONT AWESOME -->
     <link
@@ -26,8 +26,107 @@
   </head>
   <body>
     <header></header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <div class="container mt-2 mb-1">
+        <div class="row">
+          <div class="col-12 col-lg-8">
+            <div class="d-flex justify-content-between">
+              <h1>Catalogo Libri</h1>
+              <button type="button" class="btn btn-primary">
+                Aggiungi Libro
+              </button>
+            </div>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th scope="col" class="w-50">Titolo</th>
+                  <th scope="col" class="d-none d-md-table-cell">
+                    Data prestito
+                  </th>
+                  <th scope="col">Stato</th>
+                  <th scope="col">Azioni</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Lorem, ipsum dolor.</td>
+                  <td class="d-none d-md-table-cell">Data</td>
+                  <td>check</td>
+                  <td>Actions</td>
+                </tr>
+                <tr>
+                  <td>Lorem, ipsum dolor.</td>
+                  <td class="d-none d-md-table-cell">Data</td>
+                  <td>check</td>
+                  <td>Actions</td>
+                </tr>
+                <tr>
+                  <td>Lorem, ipsum dolor.</td>
+                  <td class="d-none d-md-table-cell">Data</td>
+                  <td>check</td>
+                  <td>Actions</td>
+                </tr>
+                <tr>
+                  <td>Lorem, ipsum dolor.</td>
+                  <td class="d-none d-md-table-cell">Data</td>
+                  <td>Check</td>
+                  <td>Actions</td>
+                </tr>
+                <tr>
+                  <td>Lorem, ipsum dolor.</td>
+                  <td class="d-none d-md-table-cell">Data</td>
+                  <td>Check</td>
+                  <td>Actions</td>
+                </tr>
+                <tr>
+                  <td>Lorem, ipsum dolor.</td>
+                  <td class="d-none d-md-table-cell">Data</td>
+                  <td>Check</td>
+                  <td>Actions</td>
+                </tr>
+                <tr>
+                  <td>Lorem, ipsum dolor.</td>
+                  <td class="d-none d-md-table-cell">Data</td>
+                  <td>Check</td>
+                  <td>Actions</td>
+                </tr>
+                <tr>
+                  <td>Lorem, ipsum dolor.</td>
+                  <td class="d-none d-md-table-cell">Data</td>
+                  <td>Check</td>
+                  <td>Actions</td>
+                </tr>
+                <tr>
+                  <td>Lorem, ipsum dolor.</td>
+                  <td class="d-none d-md-table-cell">Data</td>
+                  <td>Check</td>
+                  <td>Actions</td>
+                </tr>
+                <tr>
+                  <td>Lorem, ipsum dolor.</td>
+                  <td class="d-none d-md-table-cell">Data</td>
+                  <td>Check</td>
+                  <td>Actions</td>
+                </tr>
+                <tr>
+                  <td>Lorem, ipsum dolor.</td>
+                  <td class="d-none d-md-table-cell">Data</td>
+                  <td>Check</td>
+                  <td>Actions</td>
+                </tr>
+                <tr>
+                  <td>Lorem, ipsum dolor.</td>
+                  <td class="d-none d-md-table-cell">Data</td>
+                  <td>Check</td>
+                  <td>Actions</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="col-12 col-lg-4"></div>
+        </div>
+      </div>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
