add all in table

--- a/index.html
+++ b/index.html
@@ -44,81 +44,239 @@
                     Data prestito
                   </th>
                   <th scope="col">Stato</th>
-                  <th scope="col">Azioni</th>
+                  <th scope="col">
+                    <div class="d-flex justify-content-center">Azioni</div>
+                  </th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <td>Lorem, ipsum dolor.</td>
-                  <td class="d-none d-md-table-cell">Data</td>
-                  <td>check</td>
-                  <td>Actions</td>
+                  <td class="d-none d-md-table-cell">-</td>
+                  <td>
+                    <span class="badge text-bg-success">Disponibile</span>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-center">
+                      <div class="mx-2">
+                        <button type="button" class="btn btn-outline-secondary">
+                          <i class="fa-solid fa-pencil"></i>
+                        </button>
+                      </div>
+                      <button type="button" class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </div>
+                  </td>
                 </tr>
                 <tr>
                   <td>Lorem, ipsum dolor.</td>
-                  <td class="d-none d-md-table-cell">Data</td>
-                  <td>check</td>
-                  <td>Actions</td>
+                  <td class="d-none d-md-table-cell">-</td>
+                  <td>
+                    <span class="badge text-bg-success">Disponibile</span>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-center">
+                      <div class="mx-2">
+                        <button type="button" class="btn btn-outline-secondary">
+                          <i class="fa-solid fa-pencil"></i>
+                        </button>
+                      </div>
+                      <button type="button" class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </div>
+                  </td>
                 </tr>
                 <tr>
                   <td>Lorem, ipsum dolor.</td>
-                  <td class="d-none d-md-table-cell">Data</td>
-                  <td>check</td>
-                  <td>Actions</td>
+                  <td class="d-none d-md-table-cell">18/10/2023</td>
+                  <td>
+                    <span class="badge text-white bg-warning">In prestito</span>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-center">
+                      <div class="mx-2">
+                        <button type="button" class="btn btn-outline-secondary">
+                          <i class="fa-solid fa-pencil"></i>
+                        </button>
+                      </div>
+                      <button type="button" class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </div>
+                  </td>
                 </tr>
                 <tr>
                   <td>Lorem, ipsum dolor.</td>
-                  <td class="d-none d-md-table-cell">Data</td>
-                  <td>Check</td>
-                  <td>Actions</td>
+                  <td class="d-none d-md-table-cell">-</td>
+                  <td>
+                    <span class="badge text-bg-success">Disponibile</span>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-center">
+                      <div class="mx-2">
+                        <button type="button" class="btn btn-outline-secondary">
+                          <i class="fa-solid fa-pencil"></i>
+                        </button>
+                      </div>
+                      <button type="button" class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </div>
+                  </td>
                 </tr>
                 <tr>
                   <td>Lorem, ipsum dolor.</td>
-                  <td class="d-none d-md-table-cell">Data</td>
-                  <td>Check</td>
-                  <td>Actions</td>
+                  <td class="d-none d-md-table-cell">-</td>
+                  <td>
+                    <span class="badge text-bg-danger">Non disponibile</span>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-center">
+                      <div class="mx-2">
+                        <button type="button" class="btn btn-outline-secondary">
+                          <i class="fa-solid fa-pencil"></i>
+                        </button>
+                      </div>
+                      <button type="button" class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </div>
+                  </td>
                 </tr>
                 <tr>
                   <td>Lorem, ipsum dolor.</td>
-                  <td class="d-none d-md-table-cell">Data</td>
-                  <td>Check</td>
-                  <td>Actions</td>
+                  <td class="d-none d-md-table-cell">-</td>
+                  <td>
+                    <span class="badge text-bg-success">Disponibile</span>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-center">
+                      <div class="mx-2">
+                        <button type="button" class="btn btn-outline-secondary">
+                          <i class="fa-solid fa-pencil"></i>
+                        </button>
+                      </div>
+                      <button type="button" class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </div>
+                  </td>
                 </tr>
                 <tr>
                   <td>Lorem, ipsum dolor.</td>
-                  <td class="d-none d-md-table-cell">Data</td>
-                  <td>Check</td>
-                  <td>Actions</td>
+                  <td class="d-none d-md-table-cell">21/09/2023</td>
+                  <td>
+                    <span class="badge text-white bg-warning">In prestito</span>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-center">
+                      <div class="mx-2">
+                        <button type="button" class="btn btn-outline-secondary">
+                          <i class="fa-solid fa-pencil"></i>
+                        </button>
+                      </div>
+                      <button type="button" class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </div>
+                  </td>
                 </tr>
                 <tr>
                   <td>Lorem, ipsum dolor.</td>
-                  <td class="d-none d-md-table-cell">Data</td>
-                  <td>Check</td>
-                  <td>Actions</td>
+                  <td class="d-none d-md-table-cell">-</td>
+                  <td>
+                    <span class="badge text-bg-success">Disponibile</span>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-center">
+                      <div class="mx-2">
+                        <button type="button" class="btn btn-outline-secondary">
+                          <i class="fa-solid fa-pencil"></i>
+                        </button>
+                      </div>
+                      <button type="button" class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </div>
+                  </td>
                 </tr>
                 <tr>
                   <td>Lorem, ipsum dolor.</td>
-                  <td class="d-none d-md-table-cell">Data</td>
-                  <td>Check</td>
-                  <td>Actions</td>
+                  <td class="d-none d-md-table-cell">-</td>
+                  <td>
+                    <span class="badge text-bg-danger">Non disponibile</span>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-center">
+                      <div class="mx-2">
+                        <button type="button" class="btn btn-outline-secondary">
+                          <i class="fa-solid fa-pencil"></i>
+                        </button>
+                      </div>
+                      <button type="button" class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </div>
+                  </td>
                 </tr>
                 <tr>
                   <td>Lorem, ipsum dolor.</td>
-                  <td class="d-none d-md-table-cell">Data</td>
-                  <td>Check</td>
-                  <td>Actions</td>
+                  <td class="d-none d-md-table-cell">25/07/2023</td>
+                  <td>
+                    <span class="badge text-white bg-warning">In prestito</span>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-center">
+                      <div class="mx-2">
+                        <button type="button" class="btn btn-outline-secondary">
+                          <i class="fa-solid fa-pencil"></i>
+                        </button>
+                      </div>
+                      <button type="button" class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </div>
+                  </td>
                 </tr>
                 <tr>
                   <td>Lorem, ipsum dolor.</td>
-                  <td class="d-none d-md-table-cell">Data</td>
-                  <td>Check</td>
-                  <td>Actions</td>
+                  <td class="d-none d-md-table-cell">-</td>
+                  <td>
+                    <span class="badge text-bg-success">Disponibile</span>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-center">
+                      <div class="mx-2">
+                        <button type="button" class="btn btn-outline-secondary">
+                          <i class="fa-solid fa-pencil"></i>
+                        </button>
+                      </div>
+                      <button type="button" class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </div>
+                  </td>
                 </tr>
                 <tr>
                   <td>Lorem, ipsum dolor.</td>
-                  <td class="d-none d-md-table-cell">Data</td>
-                  <td>Check</td>
-                  <td>Actions</td>
+                  <td class="d-none d-md-table-cell">-</td>
+                  <td>
+                    <span class="badge text-bg-success">Disponibile</span>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-center">
+                      <div class="mx-2">
+                        <button type="button" class="btn btn-outline-secondary">
+                          <i class="fa-solid fa-pencil"></i>
+                        </button>
+                      </div>
+                      <button type="button" class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </div>
+                  </td>
                 </tr>
               </tbody>
             </table>
