--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
           <div class="col-12 col-lg-8">
             <div class="d-flex justify-content-between">
               <h2>Catalogo Libri</h2>
-              <button type="button" class="btn btn-primary">
+              <a href="./new-book.html" type="button" class="btn btn-primary">
                 Aggiungi Libro
-              </button>
+              </a>
             </div>
             <table class="table table-striped">
               <thead>
